add api of FriendLink and make code style better

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,12 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.22</version>
+            <scope>provided</scope>
+        </dependency>
         <!--图片压缩-->
         <dependency>
             <groupId>net.coobird</groupId>
