--- a/src/main/resources/applicationExample.yml
+++ b/src/main/resources/applicationExample.yml
@@ -1,6 +1,6 @@
 server:
   port: 8089
-  
+
 spring:
   servlet:
     multipart:
@@ -15,6 +15,10 @@ spring:
     password: password
     url: jdbc:mysql://localhost:3306/blogs?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Asia/Shanghai
     driver-class-name: com.mysql.cj.jdbc.Driver
+  redis:
+    host: redis-host
+    port: 6378
+    password: yourPassword
 
 mybatis-plus:
   mapper-locations: classpath:mapper/*Mapper.xml
