Fix bugs of photo upload.

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ application.yml
 5963105_www.peteralbus.com.pfx
 SmsUtil.java
 /src/main/resources/8128048_www.peteralbus.com.pfx
+/src/main/resources/www.peteralbus.com.pfx
