--- a/src/main/resources/applicationExample.yml
+++ b/src/main/resources/applicationExample.yml
@@ -1,5 +1,10 @@
 server:
   port: 8089
+#  ssl:
+#    key-store: classpath:www.peteralbus.com.pfx
+#    key-alias: alias
+#    key-store-password: rl5x8mbi
+#    key-store-type: PKCS12
 
 spring:
   servlet:
@@ -11,20 +16,21 @@ spring:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
   datasource:
-    username: username
-    password: password
-    url: jdbc:mysql://localhost:3306/blogs?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Asia/Shanghai
+    username: remote
+    password: shou1951123
+    url: jdbc:mysql://peteralbus.com:3306/blogs?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Asia/Shanghai
     driver-class-name: com.mysql.cj.jdbc.Driver
-  redis:
-    host: redis-host
-    port: 6378
-    password: yourPassword
-    database: 0
+  data:
+    redis:
+      host: peteralbus.com
+      port: 7000
+      password: 0211@redis
+      database: 0
   mail:
     host: smtp.163.com
     port:
-    username: emailAddress
-    password: EmailPassword
+    username: wuhongdb@163.com
+    password: YUPXUUBYGATWMVMX
     protocol: smtp
     default-encoding: UTF-8
     properties:
@@ -40,10 +46,24 @@ mybatis-plus:
   type-aliases-package: com.peteralbus.domain
   configuration:
     map-underscore-to-camel-case: true
-    # 如果查询结果中包含空值的列，则 MyBatis 在映射的时候，不会映射这个字段
+    # ??????????????? MyBatis ???????????????
     #    call-setters-on-nulls: true
-    # 这个配置会将执行的sql打印出来，在开发或测试的时候可以用
+    # ?????????sql?????????????????
     # log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+sa-token:
+  # token名称 (同时也是cookie名称)
+    token-name: satoken_peteralbus_blog
+  # 是否允许同一账号并发登录 (为true时允许一起登录, 为false时新登录挤掉旧登录)
+  is-concurrent: true
+  # 在多人登录同一账号时，是否共用一个token (为true时所有登录共用一个token, 为false时每次登录新建一个token)
+  is-share: true
+  # token风格
+  token-style: uuid
+  # 是否输出操作日志
+  is-log: false
+  # token临时有效期 (指定时间内无操作就视为token过期) 单位: 秒
+  active-timeout: -1
 
 
 
